--- a/src/app.json
+++ b/src/app.json
@@ -1,32 +1,51 @@
 {
   "pages": [
     "pages/index/main",
+    "pages/goods-list/main",
+    "pages/all-goods/main",
+    "pages/detail/main",
+    "pages/login/main",
+    "pages/cart/main",
     "pages/logs/main",
     "pages/counter/main"
   ],
   "window": {
     "backgroundTextStyle": "light",
-    "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "WeChat",
+    "navigationBarBackgroundColor": "#FFD7D7",
+    "navigationBarTitleText": "yy零食商城",
     "navigationBarTextStyle": "black"
   },
   "tabBar": {
-    "color": "#999",
-    "backgroundColor": "#fafafa",
-    "selectedColor": "#333",
+    "color": "#000",
+    "backgroundColor": "#FFD7D7",
+    "selectedColor": "#000",
     "borderStyle": "white",
 
     "list": [{
       "text": "首页",
       "pagePath": "pages/index/main",
-      "iconPath": "static/tabs/home.png",
-      "selectedIconPath": "static/tabs/home-active.png"
-    }, {
-      "text": "订单",
-      "pagePath": "pages/logs/main",
-      "iconPath": "static/tabs/orders.png",
-      "selectedIconPath": "static/tabs/orders-active.png"
-    }],
+      "iconPath": "static/tabs/index.png",
+      "selectedIconPath": "static/tabs/indexFull.png"
+    },
+      {
+        "text": "商品",
+        "pagePath": "pages/all-goods/main",
+        "iconPath": "static/tabs/sort.png",
+        "selectedIconPath": "static/tabs/sortFull.png"
+      },
+      {
+        "text": "购物车",
+        "pagePath": "pages/cart/main",
+        "iconPath": "static/tabs/cart.png",
+        "selectedIconPath": "static/tabs/cartFull.png"
+      },
+      {
+        "text": "我的",
+        "pagePath": "pages/index/main",
+        "iconPath": "static/tabs/my.png",
+        "selectedIconPath": "static/tabs/myFull.png"
+      }
+    ],
 
     "items": [{
       "name": "首页",
